src/css/Detail.css
.container1{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-left: 30px;
    padding-right: 30px;
    padding-bottom: 50px;
    margin-top: 100px;
    gap: 170px;
    background-image: 
      linear-gradient(
        to top,  #004FFF , black
      )
    ;
}

.container2{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-left: 30px;
    padding-right: 30px;
    gap: 170px;
    margin-bottom: 200px;
    background-image: 
      linear-gradient(
        to bottom, #004FFF , black
      )
    ;
}

@media (max-width: 1000px) {
    .container1{
        flex-direction: column;
        padding-left: 10px;
        padding-right: 10px;
        gap: 30px;
        padding-bottom: 100px;
        margin-top: 150px;
    }

    .container2{
        flex-direction: column;
        padding-left: 10px;
        padding-right: 10px;
        padding-top: 100px;
        gap: 30px;
    }
}

